[package]
name = "controlgroup"
version = "0.2.1-alpha.0"
edition = "2018"
authors = ["Hidehito Yabuuchi <hdht.ybuc@gmail.com>"]
license = "MIT OR Apache-2.0"

description = "Native Rust crate for operating on cgroups"
repository = "https://github.com/orgovicia/controlgroup-rs"
readme = "README.md"

categories = ["os", "api-bindings", "os::unix-apis"]
keywords = ["cgroup", "controlgroup", "linux", "container"]

exclude = ["/.gitignore", "/.travis.yml", "/.vscode"]

[badges]
travis-ci = { repository = "ordovicia/controlgroup-rs" }

[dependencies]
# none

[dev-dependencies]
num_cpus = "1.10.1"
version-sync = "0.8.1"
