[package]
name = "controlgroup"
version = "0.2.0"
edition = "2018"
authors = ["Hidehito Yabuuchi <hdht.ybuc@gmail.com>"]
license = "MIT OR Apache-2.0"

description = "Native Rust crate for operating on cgroups"
readme = "README.md"
repository = "https://github.com/ordovicia/controlgroup-rs"
documentation = "https://docs.rs/controlgroup"

categories = ["os", "api-bindings", "os::unix-apis"]
keywords = ["cgroup", "controlgroup", "linux", "container"]

exclude = ["/.gitignore", "/.travis.yml", "/.vscode"]

[badges]
travis-ci = { repository = "ordovicia/controlgroup-rs" }

[dependencies]
# none

[dev-dependencies]
num_cpus = "1.10.1"
version-sync = "0.8.1"
