[package]
name = "controlgroup"
version = "0.2.1" # NOTE: Update `html_root_url` attribute in lib.rs
edition = "2018"
authors = ["Hidehito Yabuuchi <hdht.ybuc@gmail.com>"]
license = "MIT OR Apache-2.0"

description = "Native Rust crate for cgroup operations"
readme = "README.md"
repository = "https://github.com/ordovicia/controlgroup-rs"
documentation = "https://docs.rs/controlgroup"

categories = ["os", "api-bindings", "os::unix-apis"]
keywords = ["cgroup", "controlgroup", "linux", "container"]

exclude = ["/.gitignore", "/.travis.yml", "/.vscode"]

[badges]
travis-ci = { repository = "ordovicia/controlgroup-rs" }

[dependencies]
# none

[dev-dependencies]
num_cpus = "1.11.1"
